# silicon-toaster

./: README.md  calibrate.py  calibrate_voltage.py  plot-calibration.py  plot-calibration_voltage.py  requirements.txt  setup.py  silicontoaster.py  tool.py
.github/workflows/: rust.yml
firmware/: Cargo.toml  makefile  rust-toolchain.toml  script.ld
firmware/.cargo/: config  config.toml
firmware/src/: adc_control.rs  flash.rs  main.rs  system_timer.rs  txrx_utils.rs
ftdi/: README.md  flash.sh  silicon-toaster.conf
hardware/: emfi-cache.lib  emfi.kicad_pcb  emfi.kicad_sch  ft232.kicad_sch  power.kicad_sch
hardware/gerber/: emfi-B_Cu.gbr  emfi-B_Paste.gbr  emfi-B_Silkscreen.gbr  emfi-Edge_Cuts.gbr  emfi-F_Cu.gbr  emfi-F_Mask.gbr  emfi-F_Silkscreen.gbr  emfi-PTH.drl
hardware/models/: to-247-3-bend.wrl
hw/: .gitignore  analog.kicad_sch  analog.sch  bom-template.html  bom.py  bom_style.css  cbank.kicad_sch  cbank.sch  emfi-rescue.lib  emfi.kicad_pcb  emfi.kicad_pro  emfi.kicad_sch  emfi.pro  emfi.sch  ft232.kicad_sch  ft232.sch  mcu.kicad_sch  mcu.sch  power.kicad_sch  power.sch
hw/gerber/: emfi-B.Cu.gbr  emfi-B.Mask.gbr  emfi-B.Paste.gbr  emfi-B.SilkS.gbr  emfi-B_Mask.gbr  emfi-Edge.Cuts.gbr  emfi-F.Cu.gbr  emfi-F.Mask.gbr  emfi-F.Paste.gbr  emfi-F.SilkS.gbr  emfi-F_Paste.gbr  emfi-NPTH.drl  emfi-PTH.drl
hw/models/: coilcraft_scs.wrl
silicontoaster/: __init__.py  server.py  silicontoaster.py  tool.py
silicontoaster/gui/: __main__.py  tool.py  util.py
silicontoaster/silicontoasterapi/: __init__.py  setup.py  silicontoasterapi.py
