[package]
name = "silicontoaster"
version = "0.1.0"
authors = ["yhql <victor_servant@hotmail.com>", "Olivier Hériveaux <olivier.heriveaux@ledger.fr>"]
edition = "2018"


[dependencies.cortex-m]
version = "0.6.1"

[dependencies.stm32f2]
version = "0.8.0"
features = ["stm32f215", "rt"]

[dependencies.heapless]
version = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
