[package]
name = "silicontoaster"
version = "1.0.0"
authors = ["yhql <victor_servant@hotmail.com>", "Olivier Hériveaux <olivier.heriveaux@ledger.fr>",
            "Michaël Mouchous <michael.mouchous@ledger.fr>"]
edition = "2021"

[dependencies.pid]
version = "3.0.0"

[dependencies.cortex-m]
version = "0.7.6"

[dependencies.stm32f2]
version = "0.15.1"
features = ["stm32f215", "rt"]

[dependencies.heapless]
version = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
